# fclip

./: .gitignore  CLAUDE.md  README.md  cliff.toml  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
.husky/: pre-commit
docs/: design-philosophy.md
docs/superpowers/plans/: 2026-03-30-tab-navigation.md
docs/superpowers/specs/: 2026-03-26-theme-support-design.md  2026-03-30-tab-navigation-design.md
examples/: config.toml
scripts/: bump-version.mjs  seed_dummy_db.mjs
src/: App.css  App.tsx  commands.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app.rs  clipboard.rs  commands.rs  config.rs  constants.rs  db.rs  display.rs  error.rs  lib.rs  main.rs  search.rs
src/components/: HelpOverlay.tsx  HighlightedText.tsx  ResultList.tsx  SearchBar.tsx  StatusBar.test.ts  StatusBar.tsx  TabBar.tsx
src/hooks/: useClipboardSearch.test.ts  useClipboardSearch.ts  useCursor.ts  useKeybindings.test.ts  useKeybindings.ts
