[package]
name = "fclip"
version = "0.2.0"
description = "A fast, keyboard-driven clipboard manager for Windows"
authors = ["Kohei Wada"]
edition = "2021"
repository = "https://github.com/Kohei-Wada/fclip"
license = "MIT"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "fclip_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
clipboard-win = "5"
rusqlite = { version = "0.31", features = ["bundled"] }
fuzzy-matcher = "0.3"
toml = "0.8"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
thiserror = "1"
sha2 = "0.10"
clipboard-master = "3.1"

[dev-dependencies]
serde_json = "1"

[profile.dev]
opt-level = 0
debug = 1
codegen-units = 256

[profile.dev.package."*"]
opt-level = 1

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

